--- a/package.json
+++ b/package.json
@@ -48,35 +48,40 @@
     "node": ">=7.6.0"
   },
   "dependencies": {
-    "body-parser": "^1.16.1",
+    "body-parser": "^1.17.1",
     "compression": "^1.6.2",
-    "cors": "^2.8.1",
-    "helmet": "^3.4.0",
+    "cors": "^2.8.3",
+    "helmet": "^3.5.0",
     "isomorphic-fetch": "^2.2.1",
-    "serve-favicon": "^2.4.0",
-    "serve-static": "^1.11.2",
+    "serve-favicon": "^2.4.2",
+    "serve-static": "^1.12.2",
     "yeps": "^1.0.0",
-    "yeps-error": "^1.0.0",
+    "yeps-bodyparser": "^1.0.1",
+    "yeps-cors": "^1.0.0",
+    "yeps-error": "^1.2.0",
     "yeps-express-wrapper": "^1.0.0",
+    "yeps-helmet": "^1.0.0",
     "yeps-logger": "^1.0.0",
     "yeps-redis": "^1.0.0",
-    "yeps-router": "^1.0.0"
+    "yeps-router": "^1.0.0",
+    "yeps-server": "^1.0.0",
+    "yeps-static": "^1.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "coveralls": "^2.11.16",
-    "debug": "^2.6.1",
-    "eslint": "^3.15.0",
+    "coveralls": "^2.13.1",
+    "debug": "^2.6.6",
+    "eslint": "^3.19.0",
     "eslint-config-eslint": "^3.0.0",
-    "husky": "^0.13.1",
+    "husky": "^0.13.3",
     "istanbul": "^1.1.0-alpha.1",
-    "mocha": "^3.2.0",
-    "mocha-lcov-reporter": "^1.2.0",
-    "npm-run-all": "^4.0.1",
-    "nsp": "^2.6.2",
+    "mocha": "^3.3.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "npm-run-all": "^4.0.2",
+    "nsp": "^2.6.3",
     "promise-pause-timeout": "^1.0.0",
-    "rimraf": "^2.5.4",
+    "rimraf": "^2.6.1",
     "sinon": "^1.17.7"
   }
 }
