--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./bin/www",
-    "lint": "./node_modules/.bin/npm-run-all --parallel lint:**",
-    "lint:js": "./node_modules/.bin/eslint index.js tests",
-    "test": "./node_modules/.bin/npm-run-all --parallel test:**",
-    "test:security": "./node_modules/.bin/nsp check",
-    "test:code": "node ./node_modules/mocha/bin/_mocha tests --recursive",
-    "test:coverage": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- tests --recursive",
-    "report": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
-    "clear": "./node_modules/.bin/rimraf coverage",
+    "test": "npm-run-all test:**",
+    "test:lint": "eslint index.js tests",
+    "test:security": "nsp check",
+    "test:db:start": "docker run -d --name redis -p 6379:6379 redis:alpine",
+    "test:db:preparing": "node -e \"setTimeout(()=>1, 1000)\"",
+    "test:code": "mocha tests --recursive",
+    "test:coverage": "istanbul cover _mocha -- tests --recursive",
+    "test:db:stop": "docker rm -f redis",
+    "report": "cat ./coverage/lcov.info | coveralls",
+    "clear": "rimraf coverage",
     "precommit": "npm run lint && npm test",
     "prepush": "npm run lint && npm test"
   },
@@ -48,40 +50,37 @@
     "node": ">=7.6.0"
   },
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "compression": "^1.6.2",
-    "cors": "^2.8.3",
-    "helmet": "^3.5.0",
+    "compression": "^1.7.1",
+    "config": "^1.27.0",
+    "helmet": "^3.9.0",
     "isomorphic-fetch": "^2.2.1",
-    "serve-favicon": "^2.4.2",
-    "serve-static": "^1.12.2",
-    "yeps": "^1.0.0",
-    "yeps-bodyparser": "^1.0.1",
-    "yeps-cors": "^1.0.0",
-    "yeps-error": "^1.2.0",
-    "yeps-express-wrapper": "^1.0.0",
-    "yeps-helmet": "^1.0.0",
-    "yeps-logger": "^1.0.0",
-    "yeps-redis": "^1.0.0",
-    "yeps-router": "^1.0.0",
-    "yeps-server": "^1.0.0",
-    "yeps-static": "^1.2.0"
+    "serve-favicon": "^2.4.5",
+    "yeps": "^1.0.1",
+    "yeps-bodyparser": "^1.1.1",
+    "yeps-cors": "^1.0.1",
+    "yeps-error": "^1.2.2",
+    "yeps-express-wrapper": "^1.0.1",
+    "yeps-helmet": "^1.0.1",
+    "yeps-logger": "^1.0.1",
+    "yeps-redis": "^1.0.1",
+    "yeps-router": "^1.1.2",
+    "yeps-server": "^1.1.0",
+    "yeps-static": "^1.3.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
+    "chai": "^4.1.2",
     "chai-http": "^3.0.0",
-    "coveralls": "^2.13.1",
-    "debug": "^2.6.6",
-    "eslint": "^3.19.0",
-    "eslint-config-eslint": "^3.0.0",
-    "husky": "^0.13.3",
+    "coveralls": "^3.0.0",
+    "debug": "^3.1.0",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "husky": "^0.14.3",
     "istanbul": "^1.1.0-alpha.1",
-    "mocha": "^3.3.0",
+    "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
-    "npm-run-all": "^4.0.2",
-    "nsp": "^2.6.3",
-    "promise-pause-timeout": "^1.0.0",
-    "rimraf": "^2.6.1",
-    "sinon": "^1.17.7"
+    "npm-run-all": "^4.1.1",
+    "nsp": "^3.0.0",
+    "rimraf": "^2.6.2"
   }
 }
