--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,16 @@
 {
-  "extends": "eslint",
+  "extends": "airbnb-base",
   "env": {
-    "es6": true,
     "node": true,
     "mocha": true
   },
-  "parserOptions": {
-    "ecmaVersion": 8,
-    "sourceType": "module"
-  },
   "rules": {
-    "indent": ["error", 4, {"SwitchCase": 1}],
-    "quotes": ["error", "single"],
-    "no-unused-expressions": 0
-  },
-  "globals": {
-    "fetch": false
+    "no-unused-expressions": 0,
+    "no-param-reassign": 0,
+    "no-multi-assign": 0,
+    "newline-per-chained-call": 0,
+    "function-paren-newline": 0,
+    "no-undef": 0,
+    "comma-dangle": 0
   }
 }
