--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: node_js
 node_js:
-  - "7.6"
-  - "7.7"
-  - "7.8"
-  - "7.9"
+  - "7"
+  - "8"
 services:
-    - redis-server
+    - docker
 script:
-  - npm run lint
   - npm run test
   - npm run report
