--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 environment:
   matrix:
-    - nodejs_version: "7.7"
+    - nodejs_version: "8"
 install:
   - ps: Install-Product node $env:nodejs_version
   - npm install
@@ -10,7 +10,7 @@ test_script:
   - redis-64\tools\redis-server.exe --service-start
   - node --version
   - npm --version
-  - npm run lint
+  - npm run test:lint
   - npm run test:security
   - npm run test:code
 build: off
